user/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: micro-user-svc
spec: 
  ports: 
     -  port: 3000
        protocol: TCP
        targetPort: 3000
  selector: 
     app: conectter-user  
  type: NodePort
